# kuzet

./: .env  Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-4acdbfcd5385ff0dfce5a89c26809807fd571d22986c5c560ec9522dfa227611.json
migrations/: 20240713183448_init_scan.sql
src/: main.rs
src/common/: error.rs
src/config/: config.rs
src/domain/scan/: model.rs  repository.rs  service.rs
src/infra/: database.rs  mod.rs
src/infra/http/: mod.rs  scan_controller.rs  server.rs
src/infra/http/dto/: mod.rs
src/infra/repository/scan/: mod.rs
