[package]
name = "kuzet"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
dotenv = "0.15.0"
rustscan = "2.3.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
thiserror = "1.0.62"
lazy_static = "1.5.0"
sqlx = { version = "0.7", features = ["migrate", "postgres", "runtime-tokio-rustls", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async_once = "0.2"